--- a/css/theses.main.css
+++ b/css/theses.main.css
@@ -1688,7 +1688,7 @@ form {
 	padding: 10px 0;
 }
 
-.loading-section .loading-view {
+.loading-view {
 	width: 105px;
 	height: 30px;
 	line-height: 30px;
@@ -1698,6 +1698,15 @@ form {
 	font-size: 90%;
 	font-weight: 700;
 	margin: 0 auto;
+}
+
+.prompt-section {
+	width:  100 %;
+	height: 30px;
+	padding: 10px 0;
+	text-align: center;
+	line-height: 30px;
+	color: #777;
 }
 
 .table-centered td
