--- a/js/template/views/teachercell.hbs
+++ b/js/template/views/teachercell.hbs
@@ -1,5 +1,5 @@
 <div class="span12 teacherinfo">
-	<img class="pull-left avatar-list desktop" 	src="http://	tp2.sinaimg.cn/3200179125/180/0/1" />
+	<img class="pull-left avatar-list desktop" 	{{bindAttr src="avatarThumbURL"}} />
 	<div class="userinfo">
 		<label class="username">{{username}} {{#if screenname.length}}（ {{screenname}} ）{{/if}}</label>
 		<label class="description">{{genderString}}， {{departmentInfo.name}}</label>
