--- a/css/theses.gray.css
+++ b/css/theses.gray.css
@@ -958,3 +958,22 @@ form.update-profile fieldset.reset-password input {
   width: 50px;
   height: 50px;
 }
+
+.wrong-time-wrapper {
+  width: 300px;
+  height: 300px;
+  margin: 0 auto;
+  margin-top: 70px;
+  background: url(../img/wrongtime.png) center top no-repeat;
+}
+.wrong-time-description {
+  text-align: center;
+  padding-top: 220px;
+  font-size: 16px;
+  color: #888;
+  text-shadow: 0 1px 0px #fff;
+  line-height: 30px;
+}
+.wrong-time-description strong {
+  color: #666;
+}
