完成论题选择和论题审核两个界面的时间判断

--- a/js/template/m/title_chosen.hbs
+++ b/js/template/m/title_chosen.hbs
@@ -1,1 +1,5 @@
-{{view Theses.WrongTimeView name="选题"}}
+{{#if Theses.milestoneManager.isTitleChosenTime}}
+	论题选择
+{{else}}
+	{{view Theses.WrongTimeView name="选题"}}
+{{/if}}
