--- a/js/template/m/titles_mine.hbs
+++ b/js/template/m/titles_mine.hbs
@@ -1,1 +1,20 @@
-我的论题
+<div class="row-fluid">
+	<div class="span12">
+		<div class="widget-box">
+			<div class="widget-title">
+				<span class="icon"><i class="icon-folder-open"></i></span>
+				<h5>我的论题</h5>
+				<div class="buttons">
+					<a href="#" class="btn btn-mini">
+						<i class="icon-plus"></i> 出题
+					</a>
+				</div>
+			</div>
+			<div class="widget-content nopadding">
+
+
+
+			</div>
+		</div>
+	</div>
+</div>
