--- a/js/template/m/users.hbs
+++ b/js/template/m/users.hbs
@@ -98,7 +98,7 @@
 						{{#if loadingTeachers}}
 							{{view Theses.LoadingView}}
 						{{else}}
-							<div class="user-list">
+							<div class="custom-list">
 								{{#if hasTeachers}}
 									{{#each teachers}}
 										{{view Theses.TeacherCell teacher=this}}
