修复一个导航标题无法正常显示的问题

--- a/js/template/sidebar.hbs
+++ b/js/template/sidebar.hbs
@@ -8,7 +8,7 @@
         </label>
     </div>
     <a href="#" class="visible-phone">
-        {{Theses.mainController.currentNavItem.title}}
+        {{Theses.mainController.currentNavTitle}}
     </a>
     <ul>
         {{#each items}}
