完成我的论题列表cell样式

--- a/js/template/m/titles_mine.hbs
+++ b/js/template/m/titles_mine.hbs
@@ -20,7 +20,7 @@
 					{{view Theses.LoadingView}}
 				{{else}}
 					{{#if titles.length}}
-						<div class="custom-list">
+						<div class="custom-list bordered-list">
 							{{#each titles}}
 								{{view Theses.TitleCell title=this}}
 							{{/each}}
