--- a/css/theses.gray.css
+++ b/css/theses.gray.css
@@ -923,6 +923,7 @@ form.update-profile fieldset.reset-password input {
   border-top: 1px dotted #ccc;
 }
 
+
 .widget-content .userinfo {
   overflow: hidden;
 }
@@ -976,4 +977,35 @@ form.update-profile fieldset.reset-password input {
 }
 .wrong-time-description strong {
   color: #666;
+}
+
+.title-cell {
+  cursor: pointer;
+  border-top: 1px dotted #ccc;
+  padding: 10px 10px;
+  width: auto;
+  position: relative;
+}
+.title-cell:first-child {
+  border-bottom: 10px dotted #ccc;
+}
+.title-cell .span12 {
+  min-height: 10px;
+}
+.title-cell:hover {
+  background: #eee;
+}
+.title-cell:active {
+  background: #ddd;
+}
+.title-cell h4 {
+  float: left;
+  padding: 5px 5px 5px 0;
+  margin: 0;
+  font-size: 16px;
+  color: #666;
+}
+.title-cell span {
+  float: right;
+  padding: 5px 0;
 }
