--- a/js/template/m/users.hbs
+++ b/js/template/m/users.hbs
@@ -75,6 +75,7 @@
 	</div>
 </div>
 
+{{#if canManageTeachers}}
 <div class="section-header">
 	<h3>出题教师管理<h3>
 </div>
@@ -116,3 +117,4 @@
 		</div>
 	</div>
 </div>
+{{/if}}
