增加自动从接口获取单条对象的功能
当用户直接访问类似一下类型的地址时
http://theses.sinaapp.com/#/titles_mine/1

需要展示id为1的论题，但此时内存中并没有数据
此时应用会自动利用单条对象接口，获取数据，并在完成后自动更新界面

--- a/js/template/m/titles_show.hbs
+++ b/js/template/m/titles_show.hbs
@@ -1,1 +1,9 @@
-查看论文: {{content.title}}
+{{#if content.loading}}
+{{view Theses.LoadingView}}
+{{else}}
+  {{#if content.loadingFailed}}
+  	{{view Theses.PromptView text="论题加载失败，请尝试返回重新获取"}}
+  {{else}}
+	查看论文: {{content.title}}
+  {{/if}}
+{{/if}}
