--- a/js/template/main.hbs
+++ b/js/template/main.hbs
@@ -28,6 +28,7 @@
             {{outlet content}}
         </div>
     </div>
+    {{outlet upload}}
      <div id="sidebar-copyright" class="desktop">
         Design, Dev by <a href="http://weibo.com/naituw">@Naituw</a> , <a href="http://weibo.com/jiayoushuishou">@bo潮</a><br/>
         Copyright NFSYSU
