--- a/css/theses.gray.css
+++ b/css/theses.gray.css
@@ -1037,7 +1037,23 @@ form.update-profile fieldset.reset-password input {
   border-top: 1px dotted #ccc;
 }
 
+.user-cell img {
+  width: 50px;
+  height: 50px;
+  padding-top: 10px;
+  padding-right: 10px;
+}
 
+.user-cell .user-info {
+  padding: 10px;
+  padding-top: 12px;
+}
+.user-cell .user-info label {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+}
 
 
 
