--- a/css/theses.gray.css
+++ b/css/theses.gray.css
@@ -1155,3 +1155,48 @@ form.update-profile fieldset.reset-password input {
 }
 
 
+#confirmation-container {
+  display: table; 
+  position: absolute; 
+  height: 100%; 
+  width: 100%;
+}
+
+.confirm-window-wrapper {
+  display: table-cell; 
+  vertical-align: middle;
+}
+
+.confirm-window {
+  margin-left: auto; 
+  margin-right: auto; 
+  width: 320px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.confirm-wrapper {
+  background-color: white;
+  padding: 10px 15px;
+  -moz-box-shadow: 0 0 1px 1px rgba(0,0,0,0.2), 0 10px 27px rgba(0,0,0,0.7);
+  -webkit-box-shadow: 0 0 1px 1px rgba(0,0,0,0.2), 0 10px 27px rgba(0,0,0,0.7);
+  box-shadow: 0 0 1px 1px rgba(0,0,0,0.2), 0 10px 27px rgba(0,0,0,0.7);
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  -webkit-touch-callout: none;
+}
+
+.confirm-wrapper h4 {
+  margin-top: 10px;
+}
+.confirm-wrapper p {
+  color: #666;
+}
+
+.confirm-buttons {
+  border-top: 1px solid #ddd;
+  padding-top: 10px;
+  margin-top: 20px;
+}
