--- a/js/template/main.hbs
+++ b/js/template/main.hbs
@@ -49,7 +49,80 @@
         <div id="content-container" class="container-fluid">
             {{outlet content}}
         </div>
+<!--
+        <div id="message-panel">
+            <header class="navigation-bar">
+                <button class="btn btn-link" href="#">
+                    <i class="icon-chevron-left"></i>
+                </button>
+                <h4>bobo</h4>
+                
+            </header>
+            <div class="message-content-wrapper">
+                <div class="message-content">
+                    <div class="message-time">
+                        03-17 17:32
+                    </div>
+                    <div class="message-row message-row-left">
+                        <img class="bubble-avatar" src="http://lwapi-picmin.stor.sinaapp.com/user_1_27.jpg" />
+                        <div class="bubble">
+                            在吗？
+                        </div>
+                    </div>
+
+                    <div class="message-row message-row-right">
+                        <img class="bubble-avatar" src="https://trello-avatars.s3.amazonaws.com/816dea068ffaff64dd56ca0ae4cd4182/30.png" />
+                        <div class="bubble bubble-left">
+                            在
+                        </div>
+                    </div>
+
+                    <div class="message-row message-row-left">
+                        <img class="bubble-avatar" src="http://lwapi-picmin.stor.sinaapp.com/user_1_27.jpg" />
+                        <div class="bubble">
+                            发送邮件通知的接口做好了，文档更新到了Gist上
+                        </div>
+                    </div>
+
+                    <div class="message-row message-row-right">
+                        <img class="bubble-avatar" src="https://trello-avatars.s3.amazonaws.com/816dea068ffaff64dd56ca0ae4cd4182/30.png" />
+                        <div class="bubble bubble-left">
+                            好的
+                        </div>
+                    </div>
+
+
+                    <div class="message-time">
+                        03-17 20:13
+                    </div>
+                    <div class="message-row message-row-right">
+                        <img class="bubble-avatar" src="https://trello-avatars.s3.amazonaws.com/816dea068ffaff64dd56ca0ae4cd4182/30.png" />
+                        <div class="bubble bubble-left">
+                            那个文档上传的接口有问题
+                        </div>
+                    </div>
+                    <div class="message-row message-row-right">
+                        <img class="bubble-avatar" src="https://trello-avatars.s3.amazonaws.com/816dea068ffaff64dd56ca0ae4cd4182/30.png" />
+                        <div class="bubble bubble-left">
+                            好像读不了上传文件的文件名
+                        </div>
+                    </div>
+
+                    <div class="message-row message-row-left">
+                        <img class="bubble-avatar" src="http://lwapi-picmin.stor.sinaapp.com/user_1_27.jpg" />
+                        <div class="bubble">
+                            好，我去看看
+                        </div>
+                    </div>
+                </div>
+                <div class="message-input-wrapper">
+                    <input type="text" />
+                    <button class="btn btn-primary btn-mini">发送</button>
+                </div>
+            </div>
+        </div>
     </div>
+-->
     {{outlet upload}}
      <div id="sidebar-copyright" class="desktop">
         Design, Dev by <a href="http://weibo.com/naituw">@Naituw</a> , <a href="http://weibo.com/jiayoushuishou">@bo潮</a><br/>
