--- a/js/template/navbar.hbs
+++ b/js/template/navbar.hbs
@@ -14,10 +14,10 @@
             		<b class="caret"></b>
             	</a>
                 <ul class="dropdown-menu">
-                    <li><a class="sAdd" title="" href="#">new message</a></li>
-                    <li><a class="sInbox" title="" href="#">inbox</a></li>
-                    <li><a class="sOutbox" title="" href="#">outbox</a></li>
-                    <li><a class="sTrash" title="" href="#">trash</a></li>
+                    <li><a class="sAdd" title="" href="#">新信息</a></li>
+                    <li><a class="sInbox" title="" href="#">收件箱</a></li>
+                    <li><a class="sOutbox" title="" href="#">发件箱</a></li>
+                    <li><a class="sTrash" title="" href="#">废纸篓</a></li>
                 </ul>
             </li>
             <li>
