--- a/js/template/m/titles_show.hbs
+++ b/js/template/m/titles_show.hbs
@@ -17,15 +17,11 @@
 			<div class="widget-content">
 				<table class="table table-bordered">
 					<tr>
-						<td><strong>ID</strong></td>
-						<td>{{content.titleid}}</td>
-					</tr>
-					<tr>
 						<td><strong>标题</strong></td>
 						<td>{{content.title}}</td>
 					</tr>
 					<tr>
-						<td><strong>导师</strong></td>
+						<td><strong>指导教师</strong></td>
 						<td>{{teacherName}}</td>
 					</tr>
 					<tr>
