--- a/css/theses.main.css
+++ b/css/theses.main.css
@@ -1702,10 +1702,14 @@ form {
 .prompt-section {
 	width:  100 %;
 	height: 50px;
-	padding: 10px 0;
+	padding: 10px 10px;
 	text-align: center;
 	line-height: 50px;
 	color: #777;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
 }
 
 .table-centered td
