--- a/css/theses.gray.css
+++ b/css/theses.gray.css
@@ -1550,3 +1550,11 @@ form.update-profile fieldset.reset-password textarea {
 .review-title-cell .extended dt:first-of-type {
   margin-top: 0;
 }
+
+.load-more-container {
+  padding: 10px;
+  padding-top: 0px;
+}
+.load-more-container button {
+  font-size: 14px;
+}
