完成学生选题功能

--- a/js/template/m/title_chosen.hbs
+++ b/js/template/m/title_chosen.hbs
@@ -26,7 +26,7 @@
 					{{#if titles.length}}
 						<div class="review-title-list">
 							{{#each titles}}
-								{{view Theses.ReviewTitleCell title=this}}
+								{{view Theses.ChosenTitleCell title=this}}
 							{{/each}}
 						</div>
 					{{else}}
